--- a/Kneat.Framework/Kneat.Framework.csproj
+++ b/Kneat.Framework/Kneat.Framework.csproj
@@ -33,5 +33,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Kneat.Common\Kneat.Common.csproj" />
+    <ProjectReference Include="..\Kneat.Reports\Kneat.Reports.csproj" />
   </ItemGroup>
 </Project>
