--- a/Kneat.Pages/Kneat.Pages.csproj
+++ b/Kneat.Pages/Kneat.Pages.csproj
@@ -12,5 +12,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Kneat.Common\Kneat.Common.csproj" />
     <ProjectReference Include="..\Kneat.Framework\Kneat.Framework.csproj" />
+    <ProjectReference Include="..\Kneat.Reports\Kneat.Reports.csproj" />
   </ItemGroup>
 </Project>
