--- a/Kneat.Reports/Kneat.Reports.csproj
+++ b/Kneat.Reports/Kneat.Reports.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <PackageReference Include="ExtentReports.Core" Version="1.0.3" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Kneat.ConfigurationManager\Kneat.ConfigurationManager.csproj" />
+  </ItemGroup>
 </Project>
